# wzrd-web-ui

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
backend/: cache.py  file_watcher.py  main.py
backend/api/: __init__.py  cron.py  files.py  memory.py  serialize.py  sessions.py  terminal.py  token_costs.py  wzrd_agents.py  wzrd_blueprints.py  wzrd_fleet.py  wzrd_modes.py  wzrd_piv.py  wzrd_sandboxes.py  wzrd_zones.py
backend/chat/: engine.py
backend/collectors/: __init__.py  collect.py  corrections.py  health.py  models.py  patterns.py  profiles.py  sessions.py  skills.py  snapshot.py  utils.py  wzrd_agents.py  wzrd_blueprints.py  wzrd_fleet.py  wzrd_models.py  wzrd_modes.py  wzrd_piv.py  wzrd_sandboxes.py  wzrd_zones.py
backend/static/: index.html
backend/static/assets/: index-DjaDbAPV.js
blueprints/: dashboard-setup.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BootScreen.tsx  DashboardPanel.tsx  FilesPanel.tsx  FleetPanel.tsx  MemoryPanel.tsx  ModesPanel.tsx  PIVPanel.tsx  ProjectAgentsPanel.tsx  SandboxPanel.tsx  TerminalPanel.tsx  TopBar.tsx  ZonesPanel.tsx
frontend/src/hooks/: useTheme.tsx  useWebSocket.ts
frontend/src/i18n/: I18nProvider.tsx  translations.ts
